--- a/wilsand/css/demo.css
+++ b/wilsand/css/demo.css
@@ -2,9 +2,10 @@
   border-bottom-color: #34495e !important;
   border-top-color: #34495e !important;
 }
-.container {
+/*GIFIT: THIS IS TAKEN OUT FOR RWD*/
+/*.container {
   width: 970px !important;
-}
+}*/
 .demo-headline {
   padding: 73px 0 110px;
   text-align: center;
